# Algent

./: .gitignore  AGENTS.md  README.md
backend/: README.md  requirements.txt
backend/algent_backend/: __init__.py  app.py
backend/algent_backend/agent_system/: __init__.py
backend/algent_backend/algorithms/: __init__.py
backend/algent_backend/api/: __init__.py  routes.py
backend/algent_backend/commands/: __init__.py  dispatcher.py  models.py
backend/algent_backend/config/: __init__.py  credentials.py  settings.py
backend/algent_backend/experiments/: __init__.py
backend/algent_backend/labs/: __init__.py
backend/algent_backend/metrics/: __init__.py
backend/docs/: README.md
backend/tests/: test_algo_lab.py  test_commands.py  test_health.py
docs/: README.md  aesthetic-vision.md  algo-lab-vision.md  credentials.md  holistic-vision.md  project-vision.md  tech-stack.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/docs/: README.md
frontend/src/: App.tsx  main.tsx  metric-styles.css  styles.css
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/client/: backendClient.ts
frontend/src/components/: ApiKeyManager.tsx  GridTraceLayer.tsx  MainLayout.tsx  MetricsView.tsx  ModuleGrid.tsx  SettingsTray.tsx  TerminalPanel.tsx  WorldView.tsx
frontend/src/constants/: grid.ts
frontend/src/context/: GridContext.tsx
frontend/src/hooks/: useGridMetrics.ts  useModuleContextMenu.ts  useModulePlacement.ts  useTraceEngine.ts
(+43 files in other folders)
